# AI-Digest-Bot

./: .env.example  .gitignore  Dockerfile  README.md  briefly-landing.html  docker-compose.yml  main.py  pyproject.toml  tmp_mwlite.html
app/: __init__.py  config.py  main.py
app/ai/: base.py  context_limits.py  factory.py  limits.py  local_provider.py  openai_provider.py  openai_slots.py  openai_urls.py  prompts.py  response.py  scoring.py
app/bot/: channel_picker.py  connect_step.py  digest_ui.py  gmail_notify.py  helpers.py  inline_channels.py  keyboards.py  linkedin_flow.py  linkedin_picker.py  logging_middleware.py  login_complete.py  middlewares.py  onboarding_flow.py  platform_flow.py  platform_screens.py  screen.py  slack_notify.py  slack_picker.py  sources_flow.py  states.py  subscription_flow.py  telethon_notify.py  texts.py  time_flow.py  yandex_notify.py
app/db/: migrate_platform_settings.py  seed.py  session.py
app/i18n/: __init__.py  core.py  strings.py
app/models/: __init__.py  catalog_channel.py  digest.py  linkedin_profile.py  platform_settings.py  slack_channel.py  source.py  user.py
app/repositories/: catalog_repository.py  digest_repository.py  (+5 more)
docs/: privacy-policy.html  terms-of-service.html
landing/: README.md  cv_portfolio.volumes.example.txt  privacy-policy.html  terms-of-service.html
scripts/: generate_encryption_key.py  generate_session.py  parse_linkedin_profile.py  test_li_backward.py  test_li_posts_page.py  test_li_public.py  test_li_scan.py  test_li_search.py  test_li_search_engines.py  test_li_search_parse.py
(+71 files in other folders)
