[tool.poetry]
name = "ai-digest-bot"
version = "0.1.0"
description = "Telegram bot for AI-powered digests from public channels"
authors = ["AI Digest Bot"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15.0"
aiohttp-socks = "^0.9.0"
telethon = "^1.38.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
httpx = "^0.28.1"
openai = "^1.57.0"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
python-socks = "^2.8.1"
PySocks = "^1.7.1"
cryptography = "^44.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
